# backward-llm

./: README.md  pyproject.toml
backward_llm/: __init__.py  configuration.py  crf.py  modeling.py  rtokenizer.py
experiments/downstream/: README.md  conlleval.py  dataset.py  plot.py  test.py  train.py
experiments/downstream/shells/: canceler.sh  download.sh  predict.sh  run.sh  run_baseline_bert.sh  run_baseline_gpt2.sh  run_baseline_gpt2_large.sh  run_baseline_llama2.sh  run_gpt2.sh  run_llama2.sh  tok.sh
experiments/downstream/shells/crf/: run_baseline_bert.sh  run_baseline_gpt2.sh  run_baseline_llama2.sh  run_gpt2.sh  run_llama2.sh
experiments/downstream/shells/lr_tune/: run_baseline_gpt2.sh  run_baseline_llama2.sh  run_gpt2.sh  run_llama2.sh
experiments/downstream/shells/random/: run_baseline_bert.sh
experiments/downstream/shells/sample_params/: run_baseline.sh  run_baseline_bert.sh  run_baseline_gpt2_large.sh  run_baseline_llama2.sh  run_gpt2.sh  run_gpt2_test.sh  run_llama2.sh  run_sample.sh
experiments/downstream/shells/trans/: run.sh  run_baseline_bert.sh  run_baseline_gpt2.sh  run_baseline_llama2.sh  run_gpt2.sh  run_llama2.sh
experiments/downstream/utils/: __init__.py  draw_param.py  utils.py
experiments/downstream/visualize/: README.md  conll03_train.txt  conll03_valid.txt  visualize_dataset.py  visualize_prediction.py
experiments/train_backward/: README.md  convert_to_safetensors.py  dataset.py  preprocess.py  preprocess.sh  train.py  train.sh
tests/billm/: test_modeling.py  test_rtokenizer.py
